# largecrimsoncanine

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REFACTOR_PLAN.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: README.md  geometric_product.rs  run_all.py  vs_competition.py
lcc/: __init__.py
lcc/codegen/: __init__.py  python.py
lcc/jax/: __init__.py  multivector.py
lcc/symbolic/: __init__.py  multivector.py
lcc/torch/: __init__.py  multivector.py
lcc/viz/: __init__.py  ganja.py
src/: algebra.rs  algebra_legacy.rs  batch.rs  cga.rs  lib.rs  multivector.rs  pga.rs  pyalgebra.rs  simd.rs  sta.rs
src/algebra/: blades.rs  cayley.rs  mod.rs  registry.rs  signature.rs
tests/: conftest.py  test_algebras.py  test_basic.py  test_batch.py  test_cga.py  test_pga.py  test_sta.py  test_viz.py
