[package]
name = "largecrimsoncanine"
version = "0.1.0"
edition = "2021"
description = "High-performance geometric algebra for Python, built on a Rust backend"
license = "MIT"
repository = "https://github.com/LargeCrimsonCanine/largecrimsoncanine"

[lib]
name = "largecrimsoncanine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "multiple-pymethods"] }
once_cell = "1.19"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "geometric_product"
harness = false

[profile.release]
opt-level = 3
lto = true

