[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "largecrimsoncanine"
version = "0.1.0"
description = "High-performance geometric algebra for Python, built on a Rust backend"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.maturin]
features = ["pyo3/extension-module"]

